@@ -1,3 +1,10 @@
+2005-01-26 Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* slab.cpp: Better stability for mirrored slabs.
+	* slab.h: Ditto.
+	* slaboverlap.cpp: Ditto.
+	* slaboverlap.h: Ditto.
+
 2004-03-04 Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* slab.cpp: Lambda can now be complex.
